@@ -21,7 +21,9 @@ package org.apache.hadoop.hbase.regionserver.transactional;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -138,15 +140,21 @@ class TransactionState {
   }
 
   void addWrite(final Put write) {
-    byte [] now = Bytes.toBytes(System.currentTimeMillis());
-      // HAVE to manually set the KV timestamps
-      for (List<KeyValue> kvs : write.getFamilyMap().values()) {
-          for (KeyValue kv : kvs) {
-            kv.updateLatestStamp(now);
-          }
-      }
-
+    updateLatestTimestamp(write.getFamilyMap().values());
     puts.add(write);
+  }
+  
+  //FIXME REVIEW not sure about this. Needed for log recovery? but broke other tests.
+  private void updateLatestTimestamp(Collection<List<KeyValue>> kvsCollection) {
+    byte [] now = Bytes.toBytes(System.currentTimeMillis());
+    // HAVE to manually set the KV timestamps
+    for (List<KeyValue> kvs : kvsCollection) {
+      for (KeyValue kv : kvs) {
+        if (kv.isLatestTimestamp()) {
+          kv.updateLatestStamp(now);
+        }
+      }
+    }
   }
   
   boolean hasWrite() {
@@ -371,13 +379,6 @@ class TransactionState {
     return deletes;
   }
 
-  /** Set deleteSet.
-   * @param deleteSet the deleteSet to set
-   */
-   void setDeleteSet(List<Delete> deleteSet) {
-    this.deletes = deleteSet;
-  }
-
    /** Get a scanner to go through the puts from this transaction. Used to weave together the local trx puts with the global state.
     * 
     * @return scanner
@@ -393,20 +394,54 @@ class TransactionState {
     */
    private class PutScanner implements KeyValueScanner, InternalScanner {
 
-     private NavigableSet<KeyValue> kvSet;
+     private List<KeyValue> kvList;
      private Iterator<KeyValue> iterator;
      private boolean didHasNext = false;
      private KeyValue next = null;
      
      
      PutScanner() {
-       kvSet = new TreeSet<KeyValue>(KeyValue.COMPARATOR);
+       kvList = new ArrayList<KeyValue>();
        for (Put put : puts) {
          for (List<KeyValue> putKVs : put.getFamilyMap().values()) {
-           kvSet.addAll(putKVs);
+           kvList.addAll(putKVs);
          }
        }
-       iterator = kvSet.iterator();
+       Collections.sort(kvList, new Comparator<KeyValue>() {
+         
+         /** We want to honor the order of the puts in the case where multiple have the same timestamp.
+          * 
+          * @param o1
+          * @param o2
+          * @return
+          */
+         public int compare(KeyValue o1, KeyValue o2) {
+           int result = KeyValue.COMPARATOR.compare(o1, o2);
+           if (result != 0) {
+             return result;
+           }
+           if (o1 == o2) {
+             return 0;
+           }
+           int put1Number = getPutNumber(o1);
+           int put2Number = getPutNumber(o2);
+           return put2Number - put1Number;
+         }
+       });
+        
+       iterator = kvList.iterator();
+     }
+    
+     private int getPutNumber(KeyValue kv) {
+       for (int i=0; i < puts.size(); i++) {
+         for (List<KeyValue> putKVs : puts.get(i).getFamilyMap().values()) {
+           for (KeyValue putKV : putKVs)
+           if (putKV == kv) {
+             return i;
+           }
+         }
+       }
+       throw new IllegalStateException("Can not fine put KV in puts");
      }
      
     public void close() {
@@ -424,8 +459,18 @@ class TransactionState {
       return next;
     }
 
+    private void iteratorFrom(KeyValue key) {
+      iterator = kvList.iterator();
+      while (iterator.hasNext()) {
+        KeyValue next = iterator.next();
+        if (KeyValue.COMPARATOR.compare(next, key) >= 0) {
+          break;
+        }
+      }
+    }
+    
     public boolean seek(KeyValue key) {
-      iterator = kvSet.headSet(key).iterator();
+      iteratorFrom(key);
 
       getNext();
       return next != null;
